Restore mobile bottom margin on feature-badges, fix footer white gap

--- a/assets/feature-badges.css
+++ b/assets/feature-badges.css
@@ -8,7 +8,7 @@
 
 @media screen and (max-width: 768px) {
   .feature-badges {
-    margin-bottom: 0;
+    margin-bottom: 40px;
   }
 }
 
